feat: debug-grid beyond background and  center header

--- a/app.html
+++ b/app.html
@@ -1,19 +1,11 @@
-<body
-  class="font-sans min-h-screen flex items-center justify-center flex-col debug-grid-16"
->
-  <h1 class="text-5xl text-blue text-center mb-8" data-desc="heading">
-    Omnifood
-  </h1>
-  <div class="flex flex-shrink items-center">
-    <img
-      style="max-width: 50%; object-fit: contain"
-      src="~@img/1.jpg"
-      data-desc="dish-1"
-    />
-    <img
-      style="max-width: 50%; object-fit: contain"
-      src="~@img/2.jpg"
-      data-desc="dish-2"
-    />
-  </div>
+<body class="font-sans debug-grid-16">
+  <header>
+    <div class="hero-text-box db-center">
+      <h1>
+        Goodbye junk food. Hello super healthy meals.
+      </h1>
+      <a href="#">I’m hungry</a>
+      <a href="#">Show me more</a>
+    </div>
+  </header>
 </body>
