feat: added background image; positioned header

--- a/app.html
+++ b/app.html
@@ -1,6 +1,6 @@
-<body class="font-sans debug-grid-16">
+<body class="tw-font-sans br-debug-grid-16-solid">
   <header>
-    <div class="hero-text-box db-center">
+    <div class="br-hero-text-box br-position-center">
       <h1>
         Goodbye junk food. Hello super healthy meals.
       </h1>
