--- a/app.html
+++ b/app.html
@@ -2,10 +2,11 @@
   <header>
     <div class="br-hero-text-box br-position-center">
       <h1>
-        Goodbye junk food. Hello super healthy meals.
+        Goodbye junk food.<br />
+        Hello super healthy meals.
       </h1>
-      <a href="#">I’m hungry</a>
-      <a href="#">Show me more</a>
+      <a class="br-btn br-btn-full" href="#">I’m hungry</a>
+      <a class="br-btn br-btn-ghost" href="#">Show me more</a>
     </div>
   </header>
 </body>
