feat: added nav section hero section stays absoluetly vertically centered

--- a/app.html
+++ b/app.html
@@ -1,6 +1,20 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
   <header>
-    <div class="br-hero-text-box br-position-center">
+    <nav class="br-nav br-leading-byfont tw-clearfix">
+        <img
+          class="br-nav-logo"
+          src="~@img/logo-white.svg"
+          alt="Omnifood logo"
+        />
+        <ul class="br-nav-main br-position-center-align">
+          <li><a href="#">Food delivery</a></li>
+          <li><a href="#">How it works</a></li>
+          <li><a href="#">Our cities</a></li>
+          <li><a href="#">Sign up</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="br-position-center br-hero-text-box ">
       <h1>
         Goodbye junk food.<br />
         Hello super healthy meals.
