feat: take box as grouping name added some css comments

--- a/app.html
+++ b/app.html
@@ -1,6 +1,6 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
   <header>
-    <nav class="br-nav br-leading-byfont tw-clearfix">
+    <nav class="br-nav-box br-leading-byfont tw-clearfix">
         <img
           class="br-nav-logo"
           src="~@img/logo-white.svg"
@@ -14,7 +14,7 @@
         </ul>
       </div>
     </nav>
-    <div class="br-position-center br-hero-text-box ">
+    <div class="br-hero-box br-position-center">
       <h1>
         Goodbye junk food.<br />
         Hello super healthy meals.
