feat: started features section

--- a/app.html
+++ b/app.html
@@ -1,16 +1,16 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
-  <header>
-    <nav class="br-nav-box br-leading-byfont tw-clearfix">
+  <header class="br-section">
+    <nav class="br-container-justify-center br-leading-byfont tw-clearfix">
         <img
           class="br-nav-logo"
           src="~@img/logo-white.svg"
           alt="Omnifood logo"
         />
         <ul class="br-nav-main br-position-center-align">
-          <li><a href="#">Food delivery</a></li>
-          <li><a href="#">How it works</a></li>
-          <li><a href="#">Our cities</a></li>
-          <li><a href="#">Sign up</a></li>
+          <li><a class="br-link" href="#">Food delivery</a></li>
+          <li><a class="br-link" href="#">How it works</a></li>
+          <li><a class="br-link" href="#">Our cities</a></li>
+          <li><a class="br-link" href="#">Sign up</a></li>
         </ul>
       </div>
     </nav>
@@ -23,4 +23,8 @@
       <a class="br-btn br-btn-ghost" href="#">Show me more</a>
     </div>
   </header>
+  <section class="br-section">
+    <div class="br-container-justify-center">Row 1</div>
+    <div class="br-container-justify-center">Row 1</div>
+  </section>
 </body>
