--- a/app.html
+++ b/app.html
@@ -1,18 +1,13 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
   <header class="br-section">
     <nav class="br-container-justify-center br-leading-byfont tw-clearfix">
-        <img
-          class="br-nav-logo"
-          src="~@img/logo-white.svg"
-          alt="Omnifood logo"
-        />
-        <ul class="br-nav-main br-position-center-align">
-          <li><a class="br-link" href="#">Food delivery</a></li>
-          <li><a class="br-link" href="#">How it works</a></li>
-          <li><a class="br-link" href="#">Our cities</a></li>
-          <li><a class="br-link" href="#">Sign up</a></li>
-        </ul>
-      </div>
+      <img class="br-nav-logo" src="~@img/logo-white.svg" alt="Omnifood logo" />
+      <ul class="br-nav-main br-position-center-align">
+        <li><a class="br-link" href="#">Food delivery</a></li>
+        <li><a class="br-link" href="#">How it works</a></li>
+        <li><a class="br-link" href="#">Our cities</a></li>
+        <li><a class="br-link" href="#">Sign up</a></li>
+      </ul>
     </nav>
     <div class="br-hero-box br-position-center">
       <h1>
@@ -23,8 +18,62 @@
       <a class="br-btn br-btn-ghost" href="#">Show me more</a>
     </div>
   </header>
-  <section class="br-section">
-    <div class="br-container-justify-center">Row 1</div>
-    <div class="br-container-justify-center">Row 1</div>
+  <section class="br-section" style="color: grey">
+    <div class="br-position-center tw-relative">
+      <div class="br-container-justify-center">
+        <h2>Get food fast &mdash; not fast food</h2>
+        <p class="long-copy">
+          Hello, we’re Omnifood, your new premium food delivery service. We know
+          you’re always busy. No time for cooking. So let us take care of that,
+          we’re really good at it, we promise!
+        </p>
+      </div>
+      <div class="br-container-justify-center tw-clearfix">
+        <div class="col span-1-of-4">
+          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+            <use href="~@svg/feature-i.svg#radar"></use>
+          </svg>
+          <h3>Up to 365 days/year</h3>
+          <p>
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage. You can also choose to order
+            more flexibly if that's your style.
+          </p>
+        </div>
+        <div class="col span-1-of-4">
+          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+            <use href="~@svg/feature-i.svg#watch"></use>
+          </svg>
+          <h3>Ready in 20 minutes</h3>
+          <p>
+            You're only twenty minutes away from your delicious and super
+            healthy meals delivered right to your home. We work with the best
+            chefs in each town to ensure that you're 100% happy.
+          </p>
+        </div>
+        <div class="col span-1-of-4">
+          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+            <use href="~@svg/feature-i.svg#star"></use>
+          </svg>
+          <h3>100% organic</h3>
+          <p>
+            All our vegetables are fresh, organic and local. Animals are raised
+            without added hormones or antibiotics. Good for your health, the
+            environment, and it also tastes better!
+          </p>
+        </div>
+        <div class="col span-1-of-4">
+          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+            <use href="~@svg/feature-i.svg#announcement"></use>
+          </svg>
+          <h3>Order anything</h3>
+          <p>
+            We don't limit your creativity, which means you can order whatever
+            you feel like. You can also choose from our menu containing over 100
+            delicious meals. It's up to you!
+          </p>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
