feat: feature section developed

--- a/app.html
+++ b/app.html
@@ -1,5 +1,6 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
-  <header class="br-section">
+  <header class="br-section tw-px-2">
+    <!-- move tw-px-2 to css -->
     <nav class="br-container-justify-center br-leading-byfont tw-clearfix">
       <img class="br-nav-logo" src="~@img/logo-white.svg" alt="Omnifood logo" />
       <ul class="br-nav-main br-position-center-align">
@@ -18,7 +19,7 @@
       <a class="br-btn br-btn-ghost" href="#">Show me more</a>
     </div>
   </header>
-  <section class="br-section" style="color: grey">
+  <section class="br-section br-feature-theme">
     <div class="br-position-center tw-relative">
       <div class="br-container-justify-center">
         <h2>Get food fast &mdash; not fast food</h2>
@@ -29,8 +30,8 @@
         </p>
       </div>
       <div class="br-container-justify-center tw-clearfix">
-        <div class="col span-1-of-4">
-          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+        <div class="col span-1-of-4 pad">
+          <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#radar"></use>
           </svg>
           <h3>Up to 365 days/year</h3>
@@ -40,8 +41,8 @@
             more flexibly if that's your style.
           </p>
         </div>
-        <div class="col span-1-of-4">
-          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+        <div class="col span-1-of-4 pad">
+          <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#watch"></use>
           </svg>
           <h3>Ready in 20 minutes</h3>
@@ -51,8 +52,8 @@
             chefs in each town to ensure that you're 100% happy.
           </p>
         </div>
-        <div class="col span-1-of-4">
-          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+        <div class="col span-1-of-4 pad">
+          <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#star"></use>
           </svg>
           <h3>100% organic</h3>
@@ -62,8 +63,8 @@
             environment, and it also tastes better!
           </p>
         </div>
-        <div class="col span-1-of-4">
-          <svg class="tw-h-6 tw-w-6 tw-fill-current" data-desc="radar">
+        <div class="col span-1-of-4 pad">
+          <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#announcement"></use>
           </svg>
           <h3>Order anything</h3>
