--- a/app.html
+++ b/app.html
@@ -1,6 +1,5 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
-  <header class="br-section tw-px-2">
-    <!-- move tw-px-2 to css -->
+  <header class="br-section br-headers-theme">
     <nav class="br-container-justify-center br-leading-byfont tw-clearfix">
       <img class="br-nav-logo" src="~@img/logo-white.svg" alt="Omnifood logo" />
       <ul class="br-nav-main br-position-center-align">
@@ -19,7 +18,7 @@
       <a class="br-btn br-btn-ghost" href="#">Show me more</a>
     </div>
   </header>
-  <section class="br-section br-feature-theme">
+  <section class="br-section br-features-theme">
     <div class="br-position-center tw-relative">
       <div class="br-container-justify-center">
         <h2>Get food fast &mdash; not fast food</h2>
@@ -30,7 +29,7 @@
         </p>
       </div>
       <div class="br-container-justify-center tw-clearfix">
-        <div class="col span-1-of-4 pad">
+        <div class="col span-1-of-4 br-feature-theme">
           <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#radar"></use>
           </svg>
@@ -41,7 +40,7 @@
             more flexibly if that's your style.
           </p>
         </div>
-        <div class="col span-1-of-4 pad">
+        <div class="col span-1-of-4 br-feature-theme">
           <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#watch"></use>
           </svg>
@@ -52,7 +51,7 @@
             chefs in each town to ensure that you're 100% happy.
           </p>
         </div>
-        <div class="col span-1-of-4 pad">
+        <div class="col span-1-of-4 br-feature-theme">
           <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#star"></use>
           </svg>
@@ -63,7 +62,7 @@
             environment, and it also tastes better!
           </p>
         </div>
-        <div class="col span-1-of-4 pad">
+        <div class="col span-1-of-4 br-feature-theme">
           <svg class="icon-big tw-fill-current">
             <use href="~@svg/feature-i.svg#announcement"></use>
           </svg>
