feat: phone wont scale nicely

--- a/app.html
+++ b/app.html
@@ -144,5 +144,40 @@
         </ul>
       </div>
     </section>
+    <section class="br-section br-hiworks-theme">
+      <div
+        class="br-position-center tw-relative tw-h-inherit"
+        style="display: table"
+      >
+        <div class="br-container-justify-center" style="display: table-row">
+          <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+        </div>
+        <div
+          class="br-container-justify-center tw-clearfix"
+          style="display: table-row"
+        >
+          <div class="col span-1-of-2">
+            <img
+              class="br-hiworks-appscreen"
+              src="~@img/app-iPhone.png"
+              alt="Omnifood app on iPhone"
+            />
+          </div>
+          <div class="col span-1-of-2">
+            <ol>
+              <li class="hiworks-step">1</li>
+              <li class="hiworks-step">2</li>
+              <li class="hiworks-step">3</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--
+
+1. Choose the subscription plan that best fits your needs and sign up today.
+2. Order your delicious meal using our mobile app or website. Or you can even call us!
+3. Enjoy your meal after less than 20 minutes. See you the next time! 
+     -->
   </main>
 </body>
