feat: still img wont scale nicely

--- a/app.html
+++ b/app.html
@@ -145,17 +145,11 @@
       </div>
     </section>
     <section class="br-section br-hiworks-theme">
-      <div
-        class="br-position-center tw-relative tw-h-inherit"
-        style="display: table"
-      >
-        <div class="br-container-justify-center" style="display: table-row">
+      <div class="br-position-center tw-relative tw-h-inherit tw-max-h-inherit">
+        <div class="br-container-justify-center">
           <h2>How it works &mdash; Simple as 1, 2, 3</h2>
         </div>
-        <div
-          class="br-container-justify-center tw-clearfix"
-          style="display: table-row"
-        >
+        <div class="br-container-justify-center tw-clearfix">
           <div class="col span-1-of-2">
             <img
               class="br-hiworks-appscreen"
