--- a/app.html
+++ b/app.html
@@ -150,18 +150,33 @@
           <h2>How it works &mdash; Simple as 1, 2, 3</h2>
         </div>
         <div class="br-container-justify-center tw-clearfix">
-          <div class="col span-1-of-2">
+          <div class="col span-1-of-2 br-hiworks-steps">
             <img
-              class="br-hiworks-appscreen"
+              class="br-hiworks-appscreen-img"
               src="~@img/app-iPhone.png"
               alt="Omnifood app on iPhone"
             />
           </div>
-          <div class="col span-1-of-2">
+          <div class="col span-1-of-2 br-hiworks-steps">
             <ol>
-              <li class="hiworks-step">1</li>
-              <li class="hiworks-step">2</li>
-              <li class="hiworks-step">3</li>
+              <li class="hiworks-step">
+                <span
+                  >Choose the subscription plan that best fits your needs and
+                  sign up today.
+                </span>
+              </li>
+              <li class="hiworks-step">
+                <span
+                  >Order your delicious meal using our mobile app or website. Or
+                  you can even call us!</span
+                >
+              </li>
+              <li class="hiworks-step">
+                <span
+                  >Enjoy your meal after less than 20 minutes. See you the next
+                  time!</span
+                >
+              </li>
             </ol>
           </div>
         </div>
