feat: seperated hiworks list bullets from list items

--- a/app.html
+++ b/app.html
@@ -145,7 +145,7 @@
       </div>
     </section>
     <section class="br-section br-hiworks-theme">
-      <div class="br-position-center tw-relative tw-h-inherit tw-max-h-inherit">
+      <div class="br-position-center tw-relative">
         <div class="br-container-justify-center">
           <h2>How it works &mdash; Simple as 1, 2, 3</h2>
         </div>
@@ -182,11 +182,5 @@
         </div>
       </div>
     </section>
-    <!--
-
-1. Choose the subscription plan that best fits your needs and sign up today.
-2. Order your delicious meal using our mobile app or website. Or you can even call us!
-3. Enjoy your meal after less than 20 minutes. See you the next time! 
-     -->
   </main>
 </body>
