feat: fiddled img width to scale nicely

--- a/app.html
+++ b/app.html
@@ -151,11 +151,7 @@
         </div>
         <div class="br-container-justify-center tw-clearfix">
           <div class="col span-1-of-2 br-hiworks-steps">
-            <img
-              class="br-hiworks-appscreen-img"
-              src="~@img/app-iPhone.png"
-              alt="Omnifood app on iPhone"
-            />
+            <img src="~@img/app-iPhone.png" alt="Omnifood app on iPhone" />
           </div>
           <div class="col span-1-of-2 br-hiworks-steps">
             <ol>
