started jquery integration

--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
       <nav class="br-container-justify-center br-leading-byfont tw-clearfix">
         <img
           class="br-nav-logo"
-          src="~@img/logo-white.svg"
+          src="@img/logo-white.svg"
           alt="Omnifood logo"
         />
         <ul class="br-nav-main br-position-center-align">
@@ -36,7 +36,7 @@
         <div class="br-container-justify-center tw-clearfix">
           <div class="col span-1-of-4 br-feature-theme">
             <svg class="icon-big tw-fill-current">
-              <use href="~@svg/feature-i.svg#radar"></use>
+              <use href="@svg/feature-i.svg#radar"></use>
             </svg>
             <h3>Up to 365 days/year</h3>
             <p>
@@ -47,7 +47,7 @@
           </div>
           <div class="col span-1-of-4 br-feature-theme">
             <svg class="icon-big tw-fill-current">
-              <use href="~@svg/feature-i.svg#watch"></use>
+              <use href="@svg/feature-i.svg#watch"></use>
             </svg>
             <h3>Ready in 20 minutes</h3>
             <p>
@@ -58,7 +58,7 @@
           </div>
           <div class="col span-1-of-4 br-feature-theme">
             <svg class="icon-big tw-fill-current">
-              <use href="~@svg/feature-i.svg#star"></use>
+              <use href="@svg/feature-i.svg#star"></use>
             </svg>
             <h3>100% organic</h3>
             <p>
@@ -69,7 +69,7 @@
           </div>
           <div class="col span-1-of-4 br-feature-theme">
             <svg class="icon-big tw-fill-current">
-              <use href="~@svg/feature-i.svg#announcement"></use>
+              <use href="@svg/feature-i.svg#announcement"></use>
             </svg>
             <h3>Order anything</h3>
             <p>
@@ -87,7 +87,7 @@
           <li>
             <figure class="br-zoom-in">
               <img
-                src="~@img/1.jpg"
+                src="@img/1.jpg"
                 alt="Korean bibimbap with egg and vegetables"
               />
             </figure>
@@ -95,7 +95,7 @@
           <li>
             <figure class="br-zoom-in">
               <img
-                src="~@img/2.jpg"
+                src="@img/2.jpg"
                 alt="Simple italian pizza with cherry tomatoes"
               />
             </figure>
@@ -103,40 +103,40 @@
           <li>
             <figure class="br-zoom-in">
               <img
-                src="~@img/3.jpg"
+                src="@img/3.jpg"
                 alt="Chicken breast steak with vegetables"
               />
             </figure>
           </li>
           <li>
             <figure class="br-zoom-in">
-              <img src="~@img/4.jpg" alt="Autumn pumpkin soup" />
+              <img src="@img/4.jpg" alt="Autumn pumpkin soup" />
             </figure>
           </li>
         </ul>
         <ul class="br-favmeals tw-clearfix">
           <li>
             <figure class="br-zoom-in">
-              <img src="~@img/5.jpg" alt="Paleo beef steak with vegetables" />
+              <img src="@img/5.jpg" alt="Paleo beef steak with vegetables" />
             </figure>
           </li>
           <li>
             <figure class="br-zoom-in">
               <img
-                src="~@img/6.jpg"
+                src="@img/6.jpg"
                 alt="Healthy baguette with egg and vegetables"
               />
             </figure>
           </li>
           <li>
             <figure class="br-zoom-in">
-              <img src="~@img/7.jpg" alt="Burger with cheddar and bacon" />
+              <img src="@img/7.jpg" alt="Burger with cheddar and bacon" />
             </figure>
           </li>
           <li>
             <figure class="br-zoom-in">
               <img
-                src="~@img/8.jpg"
+                src="@img/8.jpg"
                 alt="Granola with cherries and strawberries"
               />
             </figure>
@@ -151,7 +151,7 @@
         </div>
         <div class="br-container-justify-center tw-clearfix">
           <div class="col span-1-of-2 br-hiworks-steps">
-            <img src="~@img/app-iPhone.png" alt="Omnifood app on iPhone" />
+            <img src="@img/app-iPhone.png" alt="Omnifood app on iPhone" />
           </div>
           <div class="col span-1-of-2 br-hiworks-steps">
             <ol>
