feat: added cities section

--- a/app.html
+++ b/app.html
@@ -178,5 +178,72 @@
         </div>
       </div>
     </section>
+    <section class="br-section br-cities-theme">
+      <div class="br-position-center tw-relative">
+        <div class="br-container-justify-center">
+          <h2>We're currently in these cities</h2>
+        </div>
+        <div class="br-container-justify-center tw-clearfix">
+          <div class="col span-1-of-4 br-cities-city">
+            <img src="~@img/lisbon-3.jpg" />
+            <h3>Lisbon</h3>
+            <div>
+              1600+ happy eaters
+            </div>
+            <div>
+              60+ top chefs
+            </div>
+            <div>
+              @omnifood_lx
+            </div>
+          </div>
+          <div class="col span-1-of-4 br-cities-city">
+            <img src="~@img/san-francisco.jpg" />
+            <h3>
+              San Francisco
+            </h3>
+            <div>
+              3700+ happy eaters
+            </div>
+            <div>
+              160+ top chefs
+            </div>
+            <div>
+              @omnifood_sf
+            </div>
+          </div>
+          <div class="col span-1-of-4 br-cities-city">
+            <img src="~@img/berlin.jpg" />
+            <h3>
+              Berlin
+            </h3>
+            <div>
+              2300+ happy eaters
+            </div>
+            <div>
+              110+ top chefs
+            </div>
+            <div>
+              @omnifood_berlin
+            </div>
+          </div>
+          <div class="col span-1-of-4 br-cities-city">
+            <img src="~@img/london.jpg" />
+            <h3>
+              London
+            </h3>
+            <div>
+              1200+ happy eaters
+            </div>
+            <div>
+              50+ top chefs
+            </div>
+            <div>
+              @omnifood_london
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
