feat: started sticky header theme

--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
   <main class="br-main-theme">
     <header class="br-section br-headers-theme">
-      <nav class="br-container-justify-center br-leading-byfont tw-clearfix">
+      <nav class="br-header-theme br-header-theme_sticky tw-clearfix">
         <img
           class="br-nav-logo"
           src="@img/logo-white.svg"
@@ -14,7 +14,7 @@
           <li><a class="br-link" href="#">Sign up</a></li>
         </ul>
       </nav>
-      <div class="br-hero-box br-position-center">
+      <div class="br-hero-theme">
         <h1>
           Goodbye junk food.<br />
           Hello super healthy meals.
