--- a/app.html
+++ b/app.html
@@ -1,18 +1,20 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
   <main class="br-main-theme">
     <header class="br-section br-headers-theme">
-      <nav class="br-header-theme br-header-theme_sticky tw-clearfix">
-        <!-- must set view-box, else dims of replaced element take place -->
-        <svg class="br-nav-logo tw-fill-current" viewBox="0 0 400 400">
-          <title>Omnifood logo</title>
-          <use href="@svg/omnifood.svg#logo"></use>
-        </svg>
-        <ul class="br-nav-main br-position-center-align">
-          <li><a class="br-link" href="#">Food delivery</a></li>
-          <li><a class="br-link" href="#">How it works</a></li>
-          <li><a class="br-link" href="#">Our cities</a></li>
-          <li><a class="br-link" href="#">Sign up</a></li>
-        </ul>
+      <nav class="br-header-theme br-header-theme_sticky">
+        <div class="tw-py-2 tw-h-inherit">
+          <!-- must set view-box, else dims of replaced element take place -->
+          <svg class="br-nav-logo tw-fill-current" viewBox="0 0 400 400">
+            <title>Omnifood logo</title>
+            <use href="@svg/omnifood.svg#logo"></use>
+          </svg>
+          <ul class="br-nav-main br-position-center-align">
+            <li><a class="br-link" href="#">Food delivery</a></li>
+            <li><a class="br-link" href="#">How it works</a></li>
+            <li><a class="br-link" href="#">Our cities</a></li>
+            <li><a class="br-link" href="#">Sign up</a></li>
+          </ul>
+        </div>
       </nav>
       <div class="br-hero-theme">
         <h1>
