feat: integrate jquery and waypoints min for sticky header

--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
   <main class="br-main-theme">
     <header class="br-section br-headers-theme">
-      <nav class="br-header-theme br-header-theme_sticky">
+      <nav class="br-header-theme">
         <div class="tw-py-2 tw-h-inherit">
           <!-- must set view-box, else dims of replaced element take place -->
           <svg class="br-nav-logo tw-fill-current" viewBox="0 0 400 400">
