feat: added click targets to nav and buttons

--- a/app.html
+++ b/app.html
@@ -1,18 +1,30 @@
 <body class="tw-font-sans br-debug-grid-16-solid">
   <main class="br-main-theme">
-    <header class="br-section br-headers-theme">
+    <header class="br-section br-headers-theme br-js__target_headers">
       <nav class="br-header-theme">
         <div class="tw-py-2 tw-h-inherit">
           <!-- must set view-box, else dims of replaced element take place -->
-          <svg class="br-nav-logo tw-fill-current" viewBox="0 0 400 400">
+          <svg
+            class="br-nav-logo tw-fill-current br-js__scrollto_headers"
+            viewBox="0 0 400 400"
+          >
             <title>Omnifood logo</title>
             <use href="@svg/omnifood.svg#logo"></use>
           </svg>
           <ul class="br-nav-main br-position-center-align">
-            <li><a class="br-link" href="#">Food delivery</a></li>
-            <li><a class="br-link" href="#">How it works</a></li>
-            <li><a class="br-link" href="#">Our cities</a></li>
-            <li><a class="br-link" href="#">Sign up</a></li>
+            <li>
+              <a class="br-link br-js__scrollto_features" href="#"
+                >Food delivery</a
+              >
+            </li>
+            <li>
+              <a class="br-link br-js__scrollto_hiworks" href="#"
+                >How it works</a
+              >
+            </li>
+            <li>
+              <a class="br-link br-js__scrollto_cities" href="#">Our cities</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -21,11 +33,15 @@
           Goodbye junk food.<br />
           Hello super healthy meals.
         </h1>
-        <a class="br-btn br-btn-full" href="#">I’m hungry</a>
-        <a class="br-btn br-btn-ghost" href="#">Show me more</a>
+        <a class="br-btn br-btn-full br-js__scrollto_features" href="#"
+          >I’m hungry</a
+        >
+        <a class="br-btn br-btn-ghost br-js__scrollto_favmeals" href="#"
+          >Show me more</a
+        >
       </div>
     </header>
-    <section class="br-section br-features-theme">
+    <section class="br-section br-features-theme br-js__target_features">
       <div class="br-position-center tw-relative">
         <div class="br-container-justify-center">
           <h2>Get food fast &mdash; not fast food</h2>
@@ -83,7 +99,7 @@
         </div>
       </div>
     </section>
-    <section class="br-section br-favmeals-theme">
+    <section class="br-section br-favmeals-theme br-js__target_favmeals">
       <div class="br-position-center tw-relative">
         <ul class="br-favmeals tw-clearfix">
           <li>
@@ -146,7 +162,7 @@
         </ul>
       </div>
     </section>
-    <section class="br-section br-hiworks-theme">
+    <section class="br-section br-hiworks-theme br-js__target_hiworks">
       <div class="br-position-center tw-relative">
         <div class="br-container-justify-center">
           <h2>How it works &mdash; Simple as 1, 2, 3</h2>
@@ -180,7 +196,7 @@
         </div>
       </div>
     </section>
-    <section class="br-section br-cities-theme">
+    <section class="br-section br-cities-theme br-js__target_cities">
       <div class="br-position-center tw-relative">
         <div class="br-container-justify-center">
           <h2>We're currently in these cities</h2>
